implemented cache popularity function

--- a/app/index.html
+++ b/app/index.html
@@ -23,16 +23,13 @@
 
         <div class="container">
             <header>
-                <span class="logo"></span>
-                <h1>wordcloud</h1>
+                <span class="logo">wordcloud</span>
             </header>
 
             <div class="row">
-                <div class="js-word-cloud col-lg-6">
-
+                <div class="js-word-cloud word-cloud col-lg-12">
                 </div>
             </div>
-
         </div>
 
         <!-- build:js scripts/main.js -->
