--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>wordcloud</title>
-        <meta name="description" content="">
+        <meta name="description" content="Simple Word Cloud Experiment">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- build:css -->
         <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
-        <!--endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
