--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,7 @@
     <script>mocha.setup('bdd')</script>
     <script src="bower_components/chai/chai.js"></script>
     <script>var expect = chai.expect</script>
+    <script src="bower_components/sinonjs/sinon.js"></script>
  
     <script data-main="spec/runner" src="bower_components/requirejs/require.js"></script>
 </body>
