updated README, generated dist

--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,15 @@
             <header>
                 <span class="logo">wordcloud</span>
             </header>
-
+            
             <div class="row">
                 <div class="js-word-cloud word-cloud col-lg-12">
+                    <noscript>
+                        <div class="error message text_grey text_size-5">
+                            <span class="icon glyphicon glyphicon-exclamation-sign"></span>
+                            Please enable JavaScript to enjoy <strong>wordcloud</strong>
+                        </div>
+                    </noscript>
                 </div>
             </div>
         </div>
