refactored word for topic

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
             </header>
             
             <div class="row">
-                <div class="js-word-cloud word-cloud col-lg-12">
+                <div class="js-topics topics col-lg-12">
                     <noscript>
                         <div class="error message text_grey text_size-5">
                             <span class="icon glyphicon glyphicon-exclamation-sign"></span>
