--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>wordcloud</title>
-        <meta name="description" content="Simple Word Cloud Experiment">
+        <meta name="description" content="This is a wordcloud webapp experiment">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
         <!-- build:css(.tmp) styles/main.css -->
